- fixed answer controller imports - made quiz controller implements QuizApi - updated api definition - updated test case (still not working!:)
